[package]
name = "simple-release-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
clap = { version = "4.5.26", features = ["derive"] }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
